--- a/web/todo_app/templates/index.html
+++ b/web/todo_app/templates/index.html
@@ -5,7 +5,7 @@ Home
 {% block body %}
 
 <div class="container my-4">
-    <h2>Add a Todo</h2>
+    <h2>Add a Todo Note</h2>
     <form action="/" method="POST">
         <div class="mb-3">
             <label for="title" class="form-label">Todo Title</label>
